--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/DarkTheme" >
+        android:theme="@android:style/Theme.Material >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
